<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzle</string>
    <string name="hello">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="single_player">Single-player</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_field">Fields</string>
    <string name="title_activity_question">Question</string>
    <string name="question">Question?</string>
    <string name="alt_a">A</string>
    <string name="alt_b">B</string>
    <string name="alt_c">C</string>
    <string name="alt_d">D</string>
    <string name="title_activity_level">Level</string>
    <string name="level">Level</string>
    <string name="play">Play</string>
    <string name="round">Round</string>
    <string name="sign_up">Sign up</string>
    <string name="choose_field">Choose one to play</string>
    <string name="field">Field</string>
    <string name="timer">00:00</string>
    <string name="title_activity_register">Sign up</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="mode">Game mode</string>
    <string name="title_activity_finished_round">Round</string>
    <string name="finished_round">Finished round</string>
    <string name="next_round">Play next round</string>
    <string name="pause">Pause game</string>
    <string name="logo">Logo</string>
    <string name="msg_user">Type your email!</string>
    <string name="msg_pass">Type your password!</string>
    <string name="msg_error_name">Name required!</string>
    <string name="msg_error_email">Email required!</string>
    <string name="msg_error_email_invalid">Email invalid!</string>
    <string name="msg_error_pass">Password required!</string>
    <string name="msg_error_email_exists">Email already exists!</string>
    <string name="msg_error_sign_in">Invalid email or password!</string>
    <string name="msg_success_sign_up">Account created. Log in.</string>
    <string name="score">Score</string>
    <string name="logout">Logout</string>
    <string name="title_activity_game">Game</string>
    <string name="cumulative">7.0</string>
    <string name="percent">100%</string>
    <string name="percent_hits">Hits</string>
    <string name="cumulative_average">Cumulative average</string>
    <string name="title_activity_finished_level">Level</string>
    <string name="finished_level">Finished level</string>
    <string name="next_level">Play next level</string>
    <string name="reset_game">Reset game</string>
    <string name="master">Master of</string>
    <string name="hit">Correct</string>
    <string name="miss">Incorrect</string>
    <string name="partial_score">Partial score</string>
    <string name="final_score">Final score</string>
    <string name="finish">Finish</string>
    <string name="try_again">Try again</string>
    <string name="current_question">1</string>
    <string name="game_over">Game over</string>
    <string name="cancel">Cancel</string>
    <string name="msg_reset">Your score will be restarted!</string>
    <string name="timeout">Timeout</string>

</resources>